src/objects/TO_FAQ__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>TO - Frequently Asked Questions</description>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <description>TO - used to link to websites and existing content</description>
        <label>Additional Information</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Additional_Sensitive_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TO - Highlights when sensitive information has been entered on the article</description>
        <inlineHelpText>Highlights when sensitive information has been entered on the article</inlineHelpText>
        <label>Additional Sensitive Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <description>TO</description>
        <label>Answer</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approved_by_Legal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TO - A way for the Knowledge Manager to mark that an article has been approved by the legal department</description>
        <label>Approved by Legal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Text__c</fullName>
        <description>TO : Text field used to hold category or keyword values in the previous knowledgebase</description>
        <label>Legacy Text</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>TO</description>
        <label>Question</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_PDF__c</fullName>
        <description>TO</description>
        <label>Related PDF</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Sensitive_Text__c</fullName>
        <description>TO - Text that is only available to users with the Access Sensitive Knowledge permission set</description>
        <inlineHelpText>Text that is only available to users with the Access Sensitive Knowledge permission set</inlineHelpText>
        <label>Sensitive Text</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>TO - FAQ</label>
    <pluralLabel>TO - FAQ&apos;s</pluralLabel>
</CustomObject>